# KubernetesSubmissions

./: Readme.md  kubernetes.md
log-output-ping-pong-manifests/: deployment.yaml  ingress.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml  service.yaml
log-output-ping-pong-pv/: persistentvolume.yaml
log-output-split/: Readme.md
log-output-split/manifests/: deployment.yaml  ingress.yaml
log-output-split/reader/: package.json  tsconfig.json
log-output-split/writer/: package-lock.json  package.json
log_output/: .env  .env.example  .gitignore  Dockerfile  index.js  package-lock.json  package.json
log_output/manifests/: configMap.yaml  ingress.yaml  (+2 more)
manifests/: configMap.yaml  deployment-backend.yaml  deployment-frontend.yaml  persistent-volume.yaml  postgres-service.yaml  secret.yaml  statefulset.yaml  todo-app-random-wiki-cronjob.yaml
ping-pong/: .dockerignore  .gitignore  Dockerfile  package.json
scripts/: create_wiki_todo.sh
todo-app/: .env.example  Cargo.toml  Dockerfile
todo-app-backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  todos
todo-app-backend/manifests/: configMap.yaml  deployment-backend.yaml  deployment-frontend.yaml  ingress.yaml  persistent-volume-claim.yaml  service-backend.yaml  service-frontend.yaml  service.yaml
todo-app-backend/migrations/: 20260104000000_create_todos_table.sql
todo-app-backend/src/: main.rs
todo-app-backend/src/core/: config.rs  db.rs  models.rs
todo-app-backend/src/routes/: todos.rs
todo-app-frontend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  index.html  nginx.conf
(+32 files in other folders)
