[package]
name = "todo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
dotenv = "0.15.0"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features=["full"]}
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
uuid = {version = "1.18.1", features = ["v4", "serde"]}
sqlx = {version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "macros"]}
envy = "0.4"
dotenvy = "0.15"
